# proj_eng_machine_learning_3

./: README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters_PipelineAplicacao.yml  parameters_PreparacaoDados.yml  parameters_Treinamento.yml  parameters_explora_dados.yml
data/02_intermediate/: data_filtered_prod.parquet
data/04_feature/: base_test.parquet  base_train.parquet
data/06_models/model_dt.pkl/2025-03-25T20.21.31.385Z/: model_dt.pkl
data/06_models/model_lr.pkl/2025-03-25T20.21.31.385Z/: model_lr.pkl
data/08_reporting/: df_explorado_dev.xlsx
docs/source/: conf.py  index.rst
mlartifacts/0/13bdf8bd7f9247af9386c108351f3e5a/artifacts/: data_filtered_final.parquet  data_filtered_inicial.parquet
mlartifacts/0/51a2f6d7ec0f4c04ba20c2c11a9b4dd4/artifacts/: explora_dados.xlsx
mlartifacts/0/56c1dde57ef740a48cef0ee625a597bd/artifacts/: predictions.parquet
mlartifacts/0/8739bc0be67947108693b6760518451d/artifacts/: explora_dados.xlsx
mlartifacts/0/9e4715f8e8cf4546811ffceabd6c9aea/artifacts/: base_test.parquet  base_train.parquet
mlartifacts/0/bb05744adb154ebca061f6d2707d01c7/artifacts/: data_filtered_inicial.parquet
notebooks/: baixar_dados.ipynb  features.ipynb  train_model.ipynb
src/kedro_eng_mac_proj_3/: __init__.py  __main__.py  settings.py
src/kedro_eng_mac_proj_3/pipelines/PipelineAplicacao/: __init__.py  nodes.py  pipeline.py
src/kedro_eng_mac_proj_3/pipelines/PreparacaoDados/: nodes.py  (+1 more)
streamlit/: main.py
tests/pipelines/PipelineAplicacao/: test_pipeline.py
tests/pipelines/explora_dados/: test_pipeline.py
(+11 files in other folders)
